--- a/README
+++ b/README
@@ -10,4 +10,6 @@ Example
 Example goes here.
 
 
-Copyright (c) 2008 [name of plugin creator], released under the MIT license
+Copyright (c) 2008 Glenn Gillen, released under the MIT license
+
+[![Analytics](https://ga-beacon.appspot.com/UA-46840117-1/maply/readme?pixel)](https://github.com/igrigorik/ga-beacon)
